[project]
name = "google-tasks-to-caldav"
version = "0.1.0"
description = "Import Google Tasks (Takeout JSON) into a CalDAV server."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
dependencies = [
  "caldav>=1.3",
  "icalendar>=5.0",
]

[project.scripts]
google-tasks-to-caldav = "google_tasks_to_caldav:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["google_tasks_to_caldav.py"]
